--- a/admin/forms.html
+++ b/admin/forms.html
@@ -50,7 +50,7 @@
     </div>
     <script src="../js/core.min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/dataBase.js" type="module"></script>
+    <script src="../js/forms.js" type="module"></script>
 </body>
 
 </html>
