--- a/admin/newsletter.html
+++ b/admin/newsletter.html
@@ -20,7 +20,7 @@
 <body>
     <div class="preloader">
         <div class="preloader-logo">
-            <a class="brand" href="../index.html"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
+            <a class="brand" href="../public/index.html"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
                     width="245" height="50"></a>
         </div>
         <div class="preloader-body">
@@ -50,7 +50,7 @@
     </div>
     <script src="../js/core.min.js"></script>
     <script src="../js/script.js"></script>
-    <script src="../js/dataBase.js" type="module"></script>
+    <script src="../js/newsletter.js" type="module"></script>
 </body>
 
 </html>
