--- a/public/contacts.html
+++ b/public/contacts.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 
 <body>
   <div class="preloader">
-    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt=""
+    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
           width="245" height="50" /></a>
     </div>
     <div class="preloader-body">
@@ -39,7 +39,7 @@
               <div class="rd-navbar-panel">
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark"
-                      src="images/png-judafy-logo.png" alt="" width="245" height="50" /></a>
+                      src="../images/png-judafy-logo.png" alt="" width="245" height="50" /></a>
                 </div>
               </div>
               <div class="rd-navbar-nav-wrap">
@@ -75,53 +75,53 @@
         <div class="owl-carousel owl-carousel-dots-space wow fadeIn" data-items="2" data-sm-items="3" data-md-items="4"
           data-lg-items="5" data-xl-items="6" data-dots="true" data-nav="false" data-stage-padding="0" data-loop="false"
           data-margin="0" data-mouse-drag="false" data-lightgallery="group">
-          <a class="thumbnail-thin" href="images/foto1.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto1.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto1.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto1.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto2.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto2.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto2.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto2.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto3.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto3.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto3.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto3.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto4.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto4.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto4.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto4.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto5.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto5.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto5.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto5.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto6.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto6.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto6.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto6.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto7.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto7.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto7.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto7.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto8.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto8.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto8.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto8.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto9.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto9.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto9.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto9.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
-          <a class="thumbnail-thin" href="images/foto10.jpg" data-lightgallery="item">
-            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="images/foto10.jpg" alt=""
+          <a class="thumbnail-thin" href="../images/foto10.jpg" data-lightgallery="item">
+            <div class="thumbnail-thin-inner"><img class="thumbnail-thin-image" src="../images/foto10.jpg" alt=""
                 width="320" height="450" />
             </div>
           </a>
@@ -333,18 +333,17 @@
         <div class="container">
           <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>Todos
               os Direitos Reservados.</span><span>&nbsp;</span><br class="d-sm-none" /><a href="termsofuse.html">Termos
-              de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de
-              Privacidade</a>.
+              de Uso</a><span> e</span><span>&nbsp;</span><a href="polityprivacity.html">Política de Privacidade</a>.
           </p>
         </div>
       </div>
     </footer>
   </div>
   <div class="snackbars" id="form-output-global"></div>
-  <script src="js/core.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/contactForm.js" type="module"></script>
-  <script src="js/newsletter.js" type="module"></script>
+  <script src="../js/core.min.js"></script>
+  <script src="../js/script.js"></script>
+  <script src="../js/formSubmit.js" type="module"></script>
+  <script src="../js/newsletterSubmit.js" type="module"></script>
 </body>
 
 </html>
