--- a/public/typography.html
+++ b/public/typography.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 
 <body>
   <div class="preloader">
-    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt=""
+    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
           width="245" height="50" /></a>
     </div>
     <div class="preloader-body">
@@ -39,7 +39,7 @@
               <div class="rd-navbar-panel">
                 <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
                 <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark"
-                      src="images/png-judafy-logo.png" alt="" width="245" height="50" /></a>
+                      src="../images/png-judafy-logo.png" alt="" width="245" height="50" /></a>
                 </div>
               </div>
               <div class="rd-navbar-nav-wrap">
@@ -94,7 +94,7 @@
             </ul>
           </div>
           <div class="col-xl-4 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/israel.jpg" alt="">
+            <img class="img-rounded responsive-img" src="../images/israel.jpg" alt="">
           </div>
         </div>
       </div>
@@ -129,7 +129,7 @@
             </ul>
           </div>
           <div class="col-xl-6 col-lg-6 col-md-12 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/negev.jpg" alt="">
+            <img class="img-rounded responsive-img" src="../images/negev.jpg" alt="">
           </div>
         </div>
       </div>
@@ -195,7 +195,7 @@
             <div class="row row-30 justify-content-center">
               <div class="col-sm-10 col-md-6 wow fadeIn" data-wow-delay=".3s">
                 <a class="post-light context-dark" href="https://pt.wikipedia.org/wiki/Rio_Jordão"
-                  style="background-image: url(images/rio-jordao.jpeg);">
+                  style="background-image: url(../images/rio-jordao.jpeg);">
                   <div class="post-light-inner">
                     <div class="badge">judafy</div>
                     <div class="post-light-main">
@@ -207,7 +207,7 @@
               </div>
               <div class="col-sm-10 col-md-6 wow fadeIn" data-wow-delay=".4s">
                 <a class="post-light context-dark" href="https://en.wikipedia.org/wiki/National_Water_Carrier_of_Israel"
-                  style="background-image: url(images/arqueduto.jpg);">
+                  style="background-image: url(../images/arqueduto.jpg);">
                   <div class="post-light-inner">
                     <div class="badge">judafy</div>
                     <div class="post-light-main">
@@ -238,12 +238,12 @@
               incluindo mais de 300 dias de sol por ano e alta irradiação solar.</p>
           </div>
           <div class="col-xl-4 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/plataforma-petroleo.jpg" alt="">
+            <img class="img-rounded responsive-img" src="../images/plataforma-petroleo.jpg" alt="">
           </div>
         </div>
         <div class="row row-50">
           <div class="col-xl-4 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/torre-Ashalin.jpg" alt="">
+            <img class="img-rounded responsive-img" src="../images/torre-Ashalin.jpg" alt="">
           </div>
           <div class="col-xl-8">
             <p>Com isso, o país investiu significativamente em pesquisa e desenvolvimento de novos materiais fotovoltaicos, 
@@ -314,7 +314,7 @@
       <div class="container">
         <div class="row row-50">
           <div class="col-xl-6 col-lg-6 col-md-12 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/moneh.jpg" alt="">
+            <img class="img-rounded responsive-img" src="../images/moneh.jpg" alt="">
           </div>
           <div class="col-xl-6 col-lg-6 col-md-12">
             <ul class="list-xl">
@@ -348,7 +348,7 @@
       <div class="container">
         <div class="row row-50">
           <div class="col-xl-4 wow fadeIn img-container" data-wow-delay=".4s">
-            <img class="img-rounded responsive-img" src="images/drone.jpg" alt="">
+            <img class="img-rounded responsive-img" src="../images/drone.jpg" alt="">
           </div>
           <div class="col-xl-8">
             <ul class="list-xl">
@@ -387,7 +387,7 @@
                 </li>
               </ul>
               <div class="wow fadeIn img-container" data-wow-delay=".4s">
-                <img class="img-rounded responsive-img" src="images/shakshuka.jpg" alt="">
+                <img class="img-rounded responsive-img" src="../images/shakshuka.jpg" alt="">
               </div>
             </div>
             <div class="cards__card card" data-wow-delay=".4s">
@@ -403,7 +403,7 @@
                 </li>
               </ul>
               <div class="wow fadeIn img-container" data-wow-delay=".4s">
-                <img class="img-rounded responsive-img" src="images/lei.jpg" alt="">
+                <img class="img-rounded responsive-img" src="../images/lei.jpg" alt="">
               </div>
             </div>
             <div class="cards__card card" data-wow-delay=".5s">
@@ -419,7 +419,7 @@
                 </li>
               </ul>
               <div class="wow fadeIn img-container" data-wow-delay=".5s" style="margin-top: 4px;">
-                <img id="indexeconomia" class="img-rounded responsive-img" src="images/kashrut.png" alt="">
+                <img id="indexeconomia" class="img-rounded responsive-img" src="../images/kashrut.png" alt="">
               </div>
             </div>
           </div>
@@ -578,9 +578,9 @@
     </footer>
   </div>
   <div class="snackbars" id="form-output-global"></div>
-  <script src="js/core.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/hover.js"></script>
-  <script src="js/newsletter.js" type="module"></script>
+  <script src="../js/core.min.js"></script>
+  <script src="../js/script.js"></script>
+  <script src="../js/hover.js"></script>
+  <script src="../js/newsletterSubmit.js" type="module"></script>
 </body>
 </html>
