--- a/admin/login.html
+++ b/admin/login.html
@@ -18,7 +18,7 @@
 <body>
     <div class="preloader">
         <div class="preloader-logo">
-            <a class="brand" href="../index.html"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
+            <a class="brand" href="../public/index.html"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
                     width="245" height="50"></a>
         </div>
         <div class="preloader-body">
