--- a/public/about.html
+++ b/public/about.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/fonts.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
   </head>
   <body>
     <div class="preloader">
-      <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt="" width="245" height="50"/></a>
+      <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="../images/pourpose.png" alt="" width="245" height="50"/></a>
       </div>
       <div class="preloader-body">
         <div class="cssload-container">
@@ -30,7 +30,7 @@
               <div class="rd-navbar-main">
                 <div class="rd-navbar-panel">
                   <button class="rd-navbar-toggle" data-rd-navbar-toggle=".rd-navbar-nav-wrap"><span></span></button>
-                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="images/png-judafy-logo.png" alt="" width="245" height="50"/></a>
+                  <div class="rd-navbar-brand"><a class="brand" href="index.html"><img class="brand-logo-dark" src="../images/png-judafy-logo.png" alt="" width="245" height="50"/></a>
                   </div>
                 </div>
                 <div class="rd-navbar-nav-wrap">
@@ -76,7 +76,7 @@
               </div>
             </div>
             <div class="col-md-11 col-lg-6">
-              <div class="thumbnail-media" style="background-image: url(images/thumbnail-1.jpg);"><a class="icon thumbnail-media-icon mdi mdi-play-circle-outline" href="https://www.youtube.com/watch?v=kDzDWpK5mGU" data-lightgallery="item"></a></div>
+              <div class="thumbnail-media" style="background-image: url(../images/thumbnail-1.jpg);"><a class="icon thumbnail-media-icon mdi mdi-play-circle-outline" href="https://www.youtube.com/watch?v=kDzDWpK5mGU" data-lightgallery="item"></a></div>
             </div>
           </div>
         </div>
@@ -329,8 +329,8 @@
       </footer>
     </div>
     <div class="snackbars" id="form-output-global"></div>
-    <script src="js/core.min.js"></script>
-    <script src="js/script.js"></script>
-    <script src="js/newsletter.js" type="module"></script>
+    <script src="../js/core.min.js"></script>
+    <script src="../js/script.js"></script>
+    <script src="../js/newsletterSubmit.js" type="module"></script>
   </body>
 </html>
