--- a/public/termsofuse.html
+++ b/public/termsofuse.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width height=device-height initial-scale=1.0">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="../images/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" type="text/css"
     href="//fonts.googleapis.com/css?family=Work+Sans:300,400,500,700%7CZilla+Slab:300,400,500,700,700i%7CGloria+Hallelujah">
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/fonts.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/fonts.css">
+  <link rel="stylesheet" href="../css/style.css">
   <link rel="stylesheet" href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css">
 </head>
 
 <body>
   <div class="preloader">
-    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="images/pourpose.png" alt=""
+    <div class="preloader-logo"><a class="brand"><img class="brand-logo-dark" src="../images/pourpose.png" alt=""
           width="245" height="50" /></a>
     </div>
     <div class="preloader-body">
@@ -238,7 +238,6 @@
                   Marcos Lacerda Magno<br>
                   Maria Luiza Alves<br>
                   Mateus Batista Macieira<br>
-                  Ny de O. Gonçalves<br>
                   Pedro Henrique Nogueira Ferreira<br>
                   Sara Arnoni<br>
                   Thomaz Augusto Araújo Silva<br>
@@ -377,9 +376,9 @@
   </footer>
   </div>
   <div class="snackbars" id="form-output-global"></div>
-  <script src="js/core.min.js"></script>
-  <script src="js/script.js"></script>
-  <script src="js/newsletter.js" type="module"></script>
+  <script src="../js/core.min.js"></script>
+  <script src="../js/script.js"></script>
+  <script src="../js/newsletterSubmit.js" type="module"></script>
 </body>
 
 </html>
